changed UI according to feedback from students

--- a/firm/views/clients.ejs
+++ b/firm/views/clients.ejs
@@ -6,7 +6,7 @@
             <h1 class="text-center mt-4 mb-3"> Welcome to the Clients Page</h1>
                 <table class="table table-hover mt-5 border p-4 bg-light shadow table-bordered">
                     <thead>
-                        <tr class="table-secondary">
+                        <tr class="table-danger">
                             <th scope="col"> ClientID</th>
                             <th scope="col"> First Name</th>
                             <th scope="col"> Last Name</th>
@@ -98,7 +98,6 @@
                                 <div class="mb-3 col-md-6">
                                     <label for="city">City</label>
                                     <input type="text" name="city" class="form-control" placeholder="city" id="city">
-        
                                 </div>
                                 <div class="mb-3 col-md-6">
                                     <label for="ST">State</label>
@@ -110,13 +109,10 @@
                                 </div>
                                 <div class="col-md-12">
                                     <button class="btn btn-primary float-end">Add Client</button>
-
                                 </div>
-
                             </div>
                         </form>
                     </div>
-
                 </div>
             </div>
         </div>
