--- a/firm/views/judges.ejs
+++ b/firm/views/judges.ejs
@@ -5,7 +5,7 @@
         <h1 class="text-center mt-4 mb-3"> Judges Page</h1>
         <table class="table table-hover mt-5 border p-4 bg-light shadow table-bordered">
             <thead>
-                <tr class="table-success">
+                <tr class="table-danger">
                     <th> Judge ID</th>
                     <th> First Name</th>
                     <th> Last Name</th>
