--- a/firm/views/cases.ejs
+++ b/firm/views/cases.ejs
@@ -5,7 +5,7 @@
     <h1 class="text-center mt-4 mb-3">Cases</h1>
     <table class="table table-hover mt-5 border p-4 bg-light shadow table-bordered table-striped table-primary">
         <thead>
-            <tr>
+            <tr class="table-danger">
                 <th>Case Action Num</th>
                 <th>Plaintiff ID</th>
                 <th>Defendant ID</th>
