--- a/firm/views/courts.ejs
+++ b/firm/views/courts.ejs
@@ -3,50 +3,110 @@
     <main class="container mt-5">
     <%- include('partials/navbar')%>
     <h1 class="text-center mt-4 mb-3"> County Courts</h1>
-    <table class="table table-hover mt-5 border p-4 bg-light shadow table-bordered">
-        <thead>
-            <tr>
-                <th> CourtID</th>
-                <th> Court Name</th>
-                <th> Address</th>
-                <th> City</th>
-                <th> State</th>
-                <th> Zip Code</th>
+        <table class="table table-hover mt-5 border p-4 bg-light shadow table-bordered table-striped">
+            <thead>
+                <tr class="table-danger">
+                    <th> CourtID</th>
+                    <th> Court Name</th>
+                    <th> Address</th>
+                    <th> City</th>
+                    <th> State</th>
+                    <th> Zip Code</th>
+                </tr>
+            </thead>
+            <tr class="table-warning">
+                <td>C100</td>
+                <td>Ada County Court</td>
+                <td>12 Front St</td>
+                <td>Boise</td>
+                <td>ID</td>
+                <td>83704</td>
+                <td>
+                    <button class="btn btn-primary">Edit</button>
+                    <button class="btn btn-danger">Delete</button>
+                </td>
             </tr>
-        </thead>
-        <tr>
-            <td>C100</td>
-            <td>Ada County Court</td>
-            <td>12 Front St</td>
-            <td>Boise</td>
-            <td>ID</td>
-            <td>83704</td>
-        </tr>
-        <tr>
-            <td>C102</td>
-            <td>Canyon County Court</td>
-            <td>12 2nd St</td>
-            <td>Nampa</td>
-            <td>ID</td>
-            <td>83703</td>
-        </tr>
-        <tr>
-            <td>C103</td>
-            <td>Ada County Court</td>
-            <td>12 Front St</td>
-            <td>Boise</td>
-            <td>ID</td>
-            <td>83704</td>
-        </tr>
-        <tr>
-            <td>C104</td>
-            <td>Elmore County Court</td>
-            <td>12 Front St</td>
-            <td>Boise</td>
-            <td>ID</td>
-            <td>83704</td>
-        </tr>
-    </table>
+            <tr class="table-success">
+                <td>C102</td>
+                <td>Canyon County Court</td>
+                <td>12 2nd St</td>
+                <td>Nampa</td>
+                <td>ID</td>
+                <td>83703</td>
+                <td>
+                    <button class="btn btn-primary">Edit</button>
+                    <button class="btn btn-danger">Delete</button>
+                </td>
+            </tr>
+            <tr class="table-warning">
+                <td>C103</td>
+                <td>Ada County Court</td>
+                <td>12 Front St</td>
+                <td>Boise</td>
+                <td>ID</td>
+                <td>83704</td>
+                <td>
+                    <button class="btn btn-primary">Edit</button>
+                    <button class="btn btn-danger">Delete</button>
+                </td>
+            </tr>
+            <tr class="table-success">
+                <td>C104</td>
+                <td>Elmore County Court</td>
+                <td>12 Front St</td>
+                <td>Boise</td>
+                <td>ID</td>
+                <td>83704</td>
+                <td>
+                    <button class="btn btn-primary">Edit</button>
+                    <button class="btn btn-danger">Delete</button>
+                </td> 
+            </tr>
+        </table>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 off-md-3">
+                <div class="signup-form">
+                    <form action="" class="mt-5 border p-4 bg-light shadow mb-3">
+                        <h3 class="mb-4 text-secondary">Add Court</h3>
+                        <div class="row">
+                            <div class="mb-3 col-md-6">
+                                <label for="CourtID">Court ID</label>
+                                <input type="text" name="CourtID" class="form-control" placeholder="CourtID" id="CourtID">
+                            </div>
+                            <div class="mb-3 col-md-6">
+                                <label for="Courtname">Court Name</label>
+                                <input type="text" name="Courtname" class="form-control" placeholder="Court Name" id="CourtID">
+                            </div>
+                            
+                        </div>
+                        <div class="mb-3 col-md-9">
+                            <label for="address">Address</label>
+                            <input type="text" name="address" class="form-control" placeholder="address" id="address">
+                        </div>
+                        <div class="row">
+                            <div class="mb-3 col-md-6">
+                                <label for="city">City</label>
+                                <input type="text" name="city" class="form-control" placeholder="city" id="city">
+                            </div>
+                            <div class="mb-3 col-md-6">
+                                <label for="ST">State</label>
+                                <input type="text" name="st" class="form-control" placeholder="st" id="st">
+                            </div>
+                            <div class="mb-3 col-md-6">
+                                <label for="Zipcode">Zip Code</label>
+                                <input type="number" name="Zipcode" class="form-control" placeholder="Zipcode" id="Zipcode">
+                            </div>
+                            <div class="col-md-12">
+                                <button class="btn btn-primary float-end">Add Court</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     </main>
 </body>
 </html>
