--- a/firm/views/partials/navbar.ejs
+++ b/firm/views/partials/navbar.ejs
@@ -12,8 +12,8 @@
           <a class="nav-link" href="/courts">Courts</a>
           <a class="nav-link" href="/judges">Judges</a>
         </div>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="d-flex" method="POST" action="/courts" novalidate>
+          <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
