--- a/firm/views/partials/navbar.ejs
+++ b/firm/views/partials/navbar.ejs
@@ -12,7 +12,7 @@
           <a class="nav-link" href="/courts">Courts</a>
           <a class="nav-link" href="/judges">Judges</a>
         </div>
-        <form class="d-flex" method="POST" action="/courts" novalidate>
+        <form class="d-flex" method="POST" action="/clients" novalidate>
           <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
