--- a/firm/views/add-client.ejs
+++ b/firm/views/add-client.ejs
@@ -17,37 +17,37 @@
                     <div class="row">
                         <div class="mb-3 col-md-6">
                             <label for="client_name">Client Name</label>
-                            <input type="text" name="client_name" class="form-control" placeholder="Client Name" id="client_name">
+                            <input type="text" name="client_name" class="form-control" placeholder="Client Name" id="client_name" required>
                         </div>
                         <div class="mb-3 col-md-6">
                             <label for="contact_name">Contact Name</label>
-                            <input type="text" name="contact_name" class="form-control" placeholder="Contact Name" id="contact_name">
+                            <input type="text" name="contact_name" class="form-control" placeholder="Contact Name" id="contact_name" required>
                         </div>
                         <div class="mb-3 col-md-6">
                             <label for="phone_number">Phone Number</label>
-                            <input type="number" name="phone_number" class="form-control" placeholder="Phone Number" id="phone_number">
+                            <input type="number" name="phone_number" class="form-control" placeholder="Phone Number" id="phone_number" required min="1">
                         </div>
                         <div class="mb-3 col-md-6">
                             <label for="email_address">Email</label>
-                            <input type="email" name="email_address" class="form-control" placeholder="Email" id="email_address">
+                            <input type="email" name="email_address" class="form-control" placeholder="Email" id="email_address" required>
                         </div>
                     </div>
                     <div class="mb-3 col-md-9">
                         <label for="address">Address</label>
-                        <input type="text" name="address" class="form-control" placeholder="address" id="address">
+                        <input type="text" name="address" class="form-control" placeholder="address" id="address" required>
                     </div>
                     <div class="row">
                         <div class="mb-3 col-md-6">
                             <label for="city">City</label>
-                            <input type="text" name="city" class="form-control" placeholder="city" id="city">
+                            <input type="text" name="city" class="form-control" placeholder="city" id="city" required>
                         </div>
                         <div class="mb-3 col-md-6">
                             <label for="state">State</label>
-                            <input type="text" name="state" class="form-control" placeholder="State" id="state">
+                            <input type="text" name="state" class="form-control" placeholder="State" id="state" required>
                         </div>
                         <div class="mb-3 col-md-6">
                             <label for="zip_code">Zip Code</label>
-                            <input type="number" name="zip_code" class="form-control" placeholder="Zip code" id="zip_code">
+                            <input type="number" name="zip_code" class="form-control" placeholder="Zip code" id="zip_code" required minlength="5" min="1">
                         </div>
                         <div class="col-md-12">
                             <button class="btn btn-primary float-end">Add Client</button>
