--- a/firm/views/add-court.ejs
+++ b/firm/views/add-court.ejs
@@ -17,7 +17,7 @@
                 </div>
                 <form class="d-flex" method="POST" action="/courts" novalidate>
                   <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-outline-success" type="submit">Search Courts</button>
                 </form>
               </div>
             </div>
@@ -36,7 +36,7 @@
             <div class="row">
                 <div class="col-md-4 off-md-3">
                     <div class="signup-form">
-                        <form method="POST" action="/addcourt" class="mt-5 border p-4 bg-light shadow mb-3" novalidate>
+                        <form method="POST" action="/addcourt" class="mt-5 border p-4 bg-light shadow mb-3" validate>
                             <h3 class="mb-4 text-secondary">Add Court</h3>
                             <div class="row">
                                 <div class="mb-3 col-md-6">
@@ -45,26 +45,26 @@
                                 </div>
                                 <div class="mb-3 col-md-6">
                                     <label for="court_name">Court Name</label>
-                                    <input type="text" name="court_name" class="form-control" placeholder="Court Name" id="court_name">
+                                    <input type="text" name="court_name" class="form-control" placeholder="Court Name" id="court_name" required minlength="3">
                                 </div>
                                 
                             </div>
                             <div class="mb-3 col-md-9">
                                 <label for="address">Address</label>
-                                <input type="text" name="address" class="form-control" placeholder="address" id="address">
+                                <input type="text" name="address" class="form-control" placeholder="address" id="address" required min="1">
                             </div>
                             <div class="row">
                                 <div class="mb-3 col-md-6">
                                     <label for="city">City</label>
-                                    <input type="text" name="city" class="form-control" placeholder="city" id="city">
+                                    <input type="text" name="city" class="form-control" placeholder="city" id="city" required min="1">
                                 </div>
                                 <div class="mb-3 col-md-6">
                                     <label for="state">State</label>
-                                    <input type="text" name="state" class="form-control" placeholder="state" id="state">
+                                    <input type="text" name="state" class="form-control" placeholder="state" id="state" required>
                                 </div>
                                 <div class="mb-3 col-md-6">
                                     <label for="zip_code">Zip Code</label>
-                                    <input type="number" name="zip_code" class="form-control" placeholder="zip code" id="zip_code">
+                                    <input type="number" name="zip_code" class="form-control" placeholder="zip code" id="zip_code" required min="1">
                                 </div>
                                 <div class="col-md-12">
                                     <button class="btn btn-primary float-end" type="submit">Add Court</button>
