--- a/firm/views/judges.ejs
+++ b/firm/views/judges.ejs
@@ -17,7 +17,7 @@
                 </div>
                 <form class="d-flex" method="POST" action="/judges" novalidate>
                   <input class="form-control me-2" type="search" placeholder="Search" name="search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-outline-success" type="submit">Search Judges</button>
                 </form>
               </div>
             </div>
